# mergern-kimi

./: CMakeLists.txt  PATCH_NOTES_v419_fixed_bcdc_debug.txt  README.md  build_local.sh
.github/workflows/: build-uf2.yml
diffs/: main_v419_fixed_to_bcdc_debug.diff
src/: main.c
